--- a/xmas/index.html
+++ b/xmas/index.html
@@ -49,6 +49,8 @@
               wrote siera madre in my spreadsheet, when the script runs, it will ask me, “The Treasure of the Sierra Madre, the 1948 film staring Humphrey Bogart?(y/n).” Then I can affirm that 
               that is the film I ment to write. Conversely, if that isn't the film I intended, I can reply no, and the program will spit out other matched film titles.
               <br><br>
+              The code is pretty complex and other worldly looking to the uninitiated. It looks like <a href="https://github.com/y2j964/filmDurationLookUp/blob/master/dvr.py" target="_blank">this</a>.
+              <br><br>
               Javascript is, quite frankly, a cow. It's hideous. Semi-colons abound! And yet it's used on every website on the internet. So it's obviously very useful. It's used to make websites dynamic, 
               so that users can interact with the content of the page. When you click a button that says, "Add to cart" that adds a product you are looking at into your online cart, javascript is what makes 
               that happen. You set up an event listener that listens for the user to click the button, and when they do, the button triggers a function.
