--- a/xmas/index.html
+++ b/xmas/index.html
@@ -25,15 +25,15 @@
           <article>
             <h2>What Am I Doing?</h2>
             <p>
-              I'm doing this. What is this? Well, this paragraph is a HTML node. Really basic grade-school stuff to be honest. HTML isn't even considered a programing language. 
+              I'm doing this. What is this? Well, this paragraph is a HTML node. That might sound peculiar, but anyone could learn the basic syntax in a scant 10 minutes if they so cared. HTML isn't even considered a programing language. 
               What is it considered? I don't know. Something else. Let's look it up. <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics" target="_blank">
-              According to the good people at MDN</a>, it's a "markup language." I guess I should have known that inasmuch as markup language is the the <span class="italics">m</span> and the <span class="italics">l</span> in html. Damn. 
-              Anyway, it's not a programming language because it's not intelligent enough to write out serious computer logic with. It's used for web-layout.              
+              According to the good people at MDN</a>, it's a "markup language." I guess if I had taken the time to say HyperText Markup Language in my head, I could have deduced that 
+              without the Google assist. Damn. Anyway, HTML is not a programming language because it's not intelligent enough to write out serious computer logic. It's used for web-layout.              
             </p> 
             <p> 
-              So that's cool, but it doesn't really look cool until you link the html to a CSS file. <abbr title="Cascading Style Sheets">CSS</abbr> is what styles the HTML. CSS is also not a 
-              programming language. We're talking about stuff like font, like why certain text looks different than other text. It also adds color. There is much more to CSS, but we don't need to 
-              get into the weeds on this. The point is, I know this stuff.
+              So that's cool, but it doesn't really look cool until you link the HTML to a CSS file. <abbr title="Cascading Style Sheets">CSS</abbr> is what styles the HTML. CSS is also not a 
+              programming language. We're talking about stuff like font, color, line-spacing, etc. There is much more to CSS, but we don't need to get into the weeds on this. The point is, I 
+              learned this stuff.
             </p> 
             <p> 
               But what about the actual programming languages?
@@ -49,19 +49,26 @@
               that is the film I ment to write. Conversely, if that isn't the film I intended, I can reply no, and the program will spit out other matched film titles.
             </p> 
             <p> 
-              The code is pretty complex and other worldly looking to the uninitiated. It looks like <a href="https://github.com/y2j964/filmDurationLookUp/blob/master/dvr.py" target="_blank">this</a>.
+              The code is pretty complex and otherworldly looking to the uninitiated. It looks like <a href="https://github.com/y2j964/filmDurationLookUp/blob/master/dvr.py" target="_blank">this</a>.
             </p> 
             <p> 
-              Javascript is, quite frankly, a cow. It's hideous. Semi-colons abound! And yet it's used on every website on the internet. So it's obviously very useful. It's used to make websites dynamic, 
-              so that users can interact with the content of the page. When you click a button that says, "Add to cart" that adds a product you are looking at into your online cart, javascript is what makes 
-              that happen. You set up an event listener that listens for the user to click the button, and when they do, the button triggers a function.
+              Javascript is, quite frankly, a cow. It's hideous. Semi-colons abound! And yet it's used on every website on the internet. So it's quite useful. It's the dynamic part of a webpage, 
+              enabling users to interact with the content. When you looking at a product on a ecommerce website and you click the button that says, "Add to cart", Javascript is what actually moves 
+              that item into your cart. You set up an event listener that listens for the user to click the button, and when they do, the button triggers a function to do the work that you need it to do.
               <br><br>
-              So the following button is a very primitive example of Javascript. Click it, and rejoice.
+              The following primitive example of Javascript. Pick a song subject, drop a coin in the jukebox, and marvel at the wonder of Javascript.
             </p>
-            <button>Play the greatest and best song in the world</button>    
+            <label for="jukebox"></label>
+            <select id="jukebox">
+              <option value="">--Pick a mysterious record--</option>
+              <option value="sail">Sail</option>
+              <option value="surf">Surf</option>
+              <option value="summer">Summer</option>
+            </select>
+            <button>Drop a coin</button>    
             <div class="videoHidden">
-              <iframe src="https://player.vimeo.com/video/170928574" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>
-              <p><a href="https://vimeo.com/170928574" target="_blank">The Beach Boys [Pet Sounds] - Sloop John B (Stereo Remaster)</a> from <a href="https://vimeo.com/user53379557" target="_blank">arab hachim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>          
+              <iframe src="" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>
+              <!-- <p><a href="https://vimeo.com/170928574" target="_blank">The Beach Boys [Pet Sounds] - Sloop John B (Stereo Remaster)</a> from <a href="https://vimeo.com/user53379557" target="_blank">arab hachim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>           -->
             </div>
           </article>
         </section>
