--- a/xmas/index.html
+++ b/xmas/index.html
@@ -94,7 +94,7 @@
           </aside>
         </section>  
     </main>
-    <footer class="navbar">
+    <footer>
       <!-- <h2>Hoist Up The John B's Sail!</h2> -->
       <p>&copy 2018 Happy New Year Productions<p>
     </footer>
