--- a/xmas/index.html
+++ b/xmas/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Justin Mooney">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
   <body>
     <header>
@@ -14,10 +15,11 @@
     </header>
       <nav>
         <ul class="navbar">
-          <li id="brL" ><a href="#">This</a></li>
-          <li><a href="#">Navbar</a></li>
-          <li><a href="#">Leads</a></li>
-          <li><a href="#">Nowhere</a></li>
+          <li><i class="fas fa-bars"></i></li>        
+          <li class="navLinkProper"><a href="#">This</a></li>
+          <li class="navLinkProper"><a href="#">Navbar</a></li>
+          <li class="navLinkProper"><a href="#">Leads</a></li>
+          <li class="navLinkProper"><a href="#">Nowhere</a></li>
         </ul>
       </nav>
       <main>
@@ -56,7 +58,7 @@
               enabling users to interact with the content. When you looking at a product on a ecommerce website and you click the button that says, "Add to cart", Javascript is what actually moves 
               that item into your cart. You set up an event listener that listens for the user to click the button, and when they do, the button triggers a function to do the work that you need it to do.
               <br><br>
-              The following primitive example of Javascript. Pick a song subject, drop a coin in the jukebox, and marvel at the wonder of Javascript.
+              The following is a primitive example of Javascript. Pick a song subject, drop a coin in the jukebox, and marvel at the wonder of Javascript.
             </p>
             <label for="jukebox"></label>
             <select id="jukebox">
@@ -67,7 +69,7 @@
             </select>
             <button>Drop a coin</button>    
             <div class="videoHidden">
-              <iframe src="" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>
+              <iframe src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>
               <!-- <p><a href="https://vimeo.com/170928574" target="_blank">The Beach Boys [Pet Sounds] - Sloop John B (Stereo Remaster)</a> from <a href="https://vimeo.com/user53379557" target="_blank">arab hachim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>           -->
             </div>
           </article>
@@ -81,7 +83,7 @@
               <img src="albumCover.jpg" alt="album cover for Summer Days (And Summer Nights!!) by the Beach Boys">
               <p>
               There is a song on here called "Salt Lake City." Apparently, Brian and the Boys think Salt Lake is as groovy and out of sight as I do. They even go 
-              so far to say that "girl for girl, they've got the cutest of the Western states." But then a few songs later, they're going on about how they wish they all could be California 
+              so far to say that "girl for girl, they've got the cutest of the western states." But then a few songs later, they're going on about how they wish they all could be California 
               girls. So I'm not really sure what to make of that inconsistency. Whatever the case, Salt Lake City, we'll be coming soon.
               </p>
           </aside>    
