--- a/xmas/index.html
+++ b/xmas/index.html
@@ -22,8 +22,8 @@
           <li class="navLinkProper"><a href="#">Nowhere</a></li>
         </ul>
       </nav>
-      <main>
-        <section class="mainContent">
+      <div class="wrapper">
+        <main class="mainContent">
           <article>
             <h2>What Am I Doing?</h2>
             <p>
@@ -69,12 +69,12 @@
             </select>
             <button>Drop a coin</button>    
             <div class="videoHidden">
-              <iframe src="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay"></iframe>
+              <iframe allowfullscreen allow="autoplay"></iframe>
               <!-- <p><a href="https://vimeo.com/170928574" target="_blank">The Beach Boys [Pet Sounds] - Sloop John B (Stereo Remaster)</a> from <a href="https://vimeo.com/user53379557" target="_blank">arab hachim</a> on <a href="https://vimeo.com">Vimeo</a>.</p>           -->
             </div>
           </article>
-        </section>
-        <section class="sideContent">
+        </main>
+        <div class="sideContent">
           <aside>
             <h3>What Am I Doing As I Write This Blather?</h3>
               <p>I am listening to arguably the most important rock band in American history. I'm speaking of course of the Beach Boys. Specifically, we're listening to Summer Days (And 
@@ -94,13 +94,15 @@
               </p>
               <img src="FJag.jpg" alt="vintage Fender add of guy player a Jaguar while surfing">
           </aside>
-        </section>  
-    </main>
+        </div>  
+      </div>
     <footer>
       <!-- <h2>Hoist Up The John B's Sail!</h2> -->
-      <p>&copy 2018 Happy New Year Productions<p>
+      <p>&copy;2018 Happy New Year Productions<p>
     </footer>
-    <script src="main.js" src="https://player.vimeo.com/api/player.js">
-    </script>  
+    <script src="main.js">
+    </script>
+    <script src="https://player.vimeo.com/api/player.js">
+    </script>
   </body>
 </html>
